@@ -3,26 +3,26 @@ Patool
 
 Patool is an archive file manager.
 
-Various archive formats can be  created,  extracted,  tested, listed,
-searched, repacked and compared with patool. The advantage of patool is its simplicity in
-handling archive files without having to remember a  myriad  of
-programs and options.
+Various archive formats can be created, extracted, tested, listed,
+searched, repacked and compared with patool. The advantage of patool is
+its simplicity in handling archive files without having to remember a
+myriad of programs and options.
 
 The  archive format is determined by the file(1) program and as
 a fallback by the archive file extension.
 
-patool supports 7z (.7z), ACE (.ace), ADF (.adf), ALZIP (.alz),
+patool supports 7z (.7z, .cb7), ACE (.ace, .cba), ADF (.adf), ALZIP (.alz),
 APE  (.ape), AR (.a), ARC (.arc), ARJ (.arj), BZIP2 (.bz2),
 CAB (.cab), COMPRESS (.Z), CPIO (.cpio), DEB  (.deb),  DMS  (.dms),
 FLAC  (.flac), GZIP (.gz), ISO (.iso), LRZIP (.lrz), LZH (.lha, .lzh),
-LZIP (.lz), LZMA (.lzma), LZOP (.lzo), RPM (.rpm), RAR (.rar),
-RZIP (.rz),  SHN  (.shn), TAR (.tar), XZ (.xz), ZIP (.zip, .jar) and
-ZOO (.zoo) formats.  It relies on helper applications to handle
-those archive formats (for example bzip2 for BZIP2 archives).
+LZIP (.lz), LZMA (.lzma), LZOP (.lzo), RPM (.rpm), RAR (.rar, .cbr),
+RZIP (.rz),  SHN  (.shn), TAR (.tar, .cbt), XZ (.xz),
+ZIP (.zip, .jar, .cbz) and ZOO (.zoo) archive formats.
+It relies on helper applications to handle those archive formats
+(for example bzip2 for BZIP2 archives).
 
-The  archive  formats  TAR, ZIP, BZIP2 and GZIP
-are supported natively and  do  not  require  helper
-applications to be installed.
+The archive formats TAR, ZIP, BZIP2 and GZIP are supported natively
+and do not require helper applications to be installed.
 
 Examples
 ---------
