@@ -20,15 +20,16 @@ DESCRIPTION
        The  archive format is determined by the file(1) program and as
        a fallback by the archive file extension.
 
-       patool supports 7z (.7z), ACE (.ace), ADF (.adf), ALZIP (.alz),
-       APE  (.ape), AR (.a), ARC (.arc), ARJ (.arj), BZIP2 (.bz2), CAB
-       (.cab), COMPRESS (.Z), CPIO (.cpio), DEB  (.deb),  DMS  (.dms),
-       FLAC  (.flac), GZIP (.gz), ISO (.iso), LRZIP (.lrz), LZH (.lha,
-       .lzh), LZIP (.lz), LZMA (.lzma), LZOP (.lzo), RPM  (.rpm),  RAR
-       (.rar),  RZIP  (.rz),  SHN  (.shn),  TAR  (.tar), XZ (.xz), ZIP
-       (.zip, .jar), ZOO (.zoo) and ZPAQ (.zpaq) formats.   It  relies
-       on  helper  applications  to  handle those archive formats (for
-       example bzip2 for BZIP2 archives).
+       patool supports 7z (.7z, .cb7), ACE (.ace, .cba),  ADF  (.adf),
+       ALZIP  (.alz),  APE  (.ape),  AR  (.a), ARC (.arc), ARJ (.arj),
+       BZIP2 (.bz2), CAB (.cab),  COMPRESS  (.Z),  CPIO  (.cpio),  DEB
+       (.deb), DMS (.dms), FLAC (.flac), GZIP (.gz), ISO (.iso), LRZIP
+       (.lrz), LZH  (.lha,  .lzh),  LZIP  (.lz),  LZMA  (.lzma),  LZOP
+       (.lzo),  RPM  (.rpm), RAR (.rar, .cbr), RZIP (.rz), SHN (.shn),
+       TAR (.tar, .cbt), XZ (.xz), ZIP (.zip, .jar, .cbz), ZOO  (.zoo)
+       and ZPAQ (.zpaq) archive formats.
+       It  relies  on helper applications to handle those archive for‐
+       mats (for example bzip2 for BZIP2 archives).
 
        The archive formats TAR, ZIP,  BZIP2  and  GZIP  are  supported
        natively   and   do  not  require  helper  applications  to  be
